==> varzhou/3GModem-for-Stm32/EvalBoards/ST/STM32469I-Discovery/BSP/bsp.c <==
#define   BSP_MODULE
#include <bsp.h>
#include <bsp_os.h>
#include <bsp_ser.h>
#include "stm32f4xx_hal.h"
#include "stm32469i_discovery.h"
#include "stm32469i_discovery_lcd.h"
#define  BSP_GPIOG_LED1                        DEF_BIT_06
#define  BSP_GPIOD_LED2                        DEF_BIT_04
#define  BSP_GPIOD_LED3                        DEF_BIT_05
#define  BSP_GPIOK_LED4                        DEF_BIT_03
#define  BSP_REG_DEM_CR                           (*(CPU_REG32 *)0xE000EDFC)
#define  BSP_REG_DWT_CR                           (*(CPU_REG32 *)0xE0001000)
#define  BSP_REG_DWT_CYCCNT                       (*(CPU_REG32 *)0xE0001004)
#define  BSP_REG_DBGMCU_CR                        (*(CPU_REG32 *)0xE0042004)
#define  BSP_REG_RCC_BASE_ADDR                    ((CPU_INT32U)(0x40023800))
#define  BSP_REG32_RCC_CR                         (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x00u ))
#define  BSP_REG32_RCC_PLLCFGR                    (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x04u ))
#define  BSP_REG32_RCC_CFGR                       (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x08u ))
#define  BSP_REG32_RCC_CIR                        (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x0Cu ))
#define  BSP_REG32_RCC_AHB1RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x10u ))
#define  BSP_REG32_RCC_AHB2RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x14u ))
#define  BSP_REG32_RCC_AHB3RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x18u ))

void  BSP_Init (void)
{   
    RCC_ClkInitTypeDef RCC_ClkInitStruct;
    RCC_OscInitTypeDef RCC_OscInitStruct;
    RCC_PeriphCLKInitTypeDef PeriphClkInitStruct;
    
    BSP_IntInit();

    
    HAL_RCC_DeInit();
    
    /* Enable Power Control clock */
    __HAL_RCC_PWR_CLK_ENABLE();

    /* The voltage scaling allows optimizing the power consumption when the device is 
    clocked below the maximum system frequency, to update the voltage scaling value 
    regarding system frequency refer to product datasheet.  */
    __HAL_PWR_VOLTAGESCALING_CONFIG(PWR_REGULATOR_VOLTAGE_SCALE1);

    /* Enable HSE Oscillator and activate PLL with HSE as source */
    RCC_OscInitStruct.OscillatorType = RCC_OSCILLATORTYPE_HSE;
    RCC_OscInitStruct.HSEState = RCC_HSE_ON;
    RCC_OscInitStruct.PLL.PLLState = RCC_PLL_ON;
    RCC_OscInitStruct.PLL.PLLSource = RCC_PLLSOURCE_HSE;
#if defined(USE_STM32469I_DISCO_REVA)
    RCC_OscInitStruct.PLL.PLLM = 25;
#else
    RCC_OscInitStruct.PLL.PLLM = 8;
#endif /* USE_STM32469I_DISCO_REVA */
    RCC_OscInitStruct.PLL.PLLN = 360;
    RCC_OscInitStruct.PLL.PLLP = RCC_PLLP_DIV2;
    RCC_OscInitStruct.PLL.PLLQ = 7;
    RCC_OscInitStruct.PLL.PLLR = 2;
    if(HAL_RCC_OscConfig(&RCC_OscInitStruct) != HAL_OK)
    {
        while(1);
    }

    /* Enable the OverDrive to reach the 180 Mhz Frequency */  
    if(HAL_PWREx_EnableOverDrive() != HAL_OK)
    {
        while(1);
    }

    /* Select PLLSAI output as USB clock source */
    PeriphClkInitStruct.PLLSAI.PLLSAIQ = 7;
    PeriphClkInitStruct.PLLSAI.PLLSAIN = 384;
    PeriphClkInitStruct.PLLSAI.PLLSAIP = RCC_PLLSAIP_DIV8;
    PeriphClkInitStruct.PeriphClockSelection = RCC_PERIPHCLK_CK48;
    PeriphClkInitStruct.Clk48ClockSelection = RCC_CK48CLKSOURCE_PLLSAIP;
    HAL_RCCEx_PeriphCLKConfig(&PeriphClkInitStruct);

    /* Select PLL as system clock source and configure the HCLK, PCLK1 and PCLK2 
    clocks dividers */
    RCC_ClkInitStruct.ClockType = (RCC_CLOCKTYPE_SYSCLK | RCC_CLOCKTYPE_HCLK | RCC_CLOCKTYPE_PCLK1 | RCC_CLOCKTYPE_PCLK2);
    RCC_ClkInitStruct.SYSCLKSource = RCC_SYSCLKSOURCE_PLLCLK;
    RCC_ClkInitStruct.AHBCLKDivider = RCC_SYSCLK_DIV1;
    RCC_ClkInitStruct.APB1CLKDivider = RCC_HCLK_DIV4;
    RCC_ClkInitStruct.APB2CLKDivider = RCC_HCLK_DIV2;
    if(HAL_RCC_ClockConfig(&RCC_ClkInitStruct, FLASH_LATENCY_5) != HAL_OK)
    {
        while(1);
    }
       
    BSP_Ser_Init();
    
    /* Configure LED1, LED2, LED3 and LED4 */
    BSP_LED_Init(LED1);
    BSP_LED_Init(LED2);
    BSP_LED_Init(LED3);
    BSP_LED_Init(LED4);
    
    /* Initialize the LCD */
    BSP_LCD_Init();
    BSP_LCD_LayerDefaultInit(0, LCD_FB_START_ADDRESS);
    BSP_LCD_SelectLayer(0);
    
    /* Init the LCD color */
    BSP_LCD_Clear(LCD_COLOR_BLACK);  
    BSP_LCD_SetBackColor(LCD_COLOR_BLACK);
    BSP_LCD_SetTextColor(LCD_COLOR_WHITE);
    BSP_LCD_SetFont (&Font16);


    
#ifdef TRACE_EN                                                 /* See project / compiler preprocessor options.         */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_IOEN_MASK;    /* Enable tracing (see Note #2).                        */
    BSP_CPU_REG_DBGMCU_CR &= ~BSP_DBGMCU_CR_TRACE_MODE_MASK;    /* Clr trace mode sel bits.                             */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_MODE_SYNC_04; /* Cfg trace mode to synch 4-bit.                       */
#endif
}

CPU_INT32U  BSP_CPU_ClkFreq (void)
{
    CPU_INT32U  hclk_freq;


    hclk_freq = HAL_RCC_GetHCLKFreq();
    return (hclk_freq);
}

static void  BSP_LED_Init()
{
    GPIO_InitTypeDef  gpio_init;


    BSP_PeriphEn(BSP_PERIPH_ID_GPIOG);                          /* Configure GPIOG for LED1                             */

    gpio_init.Pin   = BSP_GPIOG_LED1;
    gpio_init.Mode  = GPIO_MODE_OUTPUT_PP;
    gpio_init.Pull  = GPIO_PULLUP;
    gpio_init.Speed = GPIO_SPEED_HIGH;

    HAL_GPIO_Init(GPIOG, &gpio_init);

    BSP_PeriphEn(BSP_PERIPH_ID_GPIOD);                          /* Configure GPIOD for LED2 and LED3                    */

    gpio_init.Pin = BSP_GPIOD_LED2 | BSP_GPIOD_LED3;
    HAL_GPIO_Init(GPIOD, &gpio_init);


    BSP_PeriphEn(BSP_PERIPH_ID_GPIOK);                          /* Configure GPIOK for LED4                             */

    gpio_init.Pin = BSP_GPIOK_LED4;
    HAL_GPIO_Init(GPIOK, &gpio_init);
    
    
    BSP_LED_Off(0);                                             /* By default, turn off LED*/
}

void  BSP_LED_On (CPU_INT08U  led)
{
    switch (led) {
        case 0u:
             HAL_GPIO_WritePin(GPIOG, BSP_GPIOG_LED1, GPIO_PIN_RESET);
             HAL_GPIO_WritePin(GPIOD, (BSP_GPIOD_LED2 | BSP_GPIOD_LED3), GPIO_PIN_RESET);
             HAL_GPIO_WritePin(GPIOK, BSP_GPIOK_LED4, GPIO_PIN_RESET);
             break;


        case 1u:
             HAL_GPIO_WritePin(GPIOG, BSP_GPIOG_LED1, GPIO_PIN_RESET);
             break;


        case 2u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIOD_LED2, GPIO_PIN_RESET);
             break;


        case 3u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIOD_LED3, GPIO_PIN_RESET);
             break;


        case 4u:
             HAL_GPIO_WritePin(GPIOK, BSP_GPIOK_LED4, GPIO_PIN_RESET);
             break;


        default:
             break;
    }
}

void  BSP_LED_Off (CPU_INT08U led)
{
    switch (led) {
        case 0u:
             HAL_GPIO_WritePin(GPIOG, BSP_GPIOG_LED1, GPIO_PIN_SET);
             HAL_GPIO_WritePin(GPIOD, (BSP_GPIOD_LED2 | BSP_GPIOD_LED3), GPIO_PIN_SET);
             HAL_GPIO_WritePin(GPIOK, BSP_GPIOK_LED4, GPIO_PIN_SET);
             break;


        case 1u:
             HAL_GPIO_WritePin(GPIOG, BSP_GPIOG_LED1, GPIO_PIN_SET);
             break;


        case 2u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIOD_LED2, GPIO_PIN_SET);
             break;


        case 3u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIOD_LED3, GPIO_PIN_SET);
             break;


        case 4u:
             HAL_GPIO_WritePin(GPIOK, BSP_GPIOK_LED4, GPIO_PIN_SET);
             break;


        default:
             break;
    }
}

void  BSP_LED_Toggle (CPU_INT08U  led)
{
    switch (led) {
        case 0u:
             HAL_GPIO_TogglePin(GPIOG, BSP_GPIOG_LED1);
             HAL_GPIO_TogglePin(GPIOD, (BSP_GPIOD_LED3 | BSP_GPIOD_LED2));
             HAL_GPIO_TogglePin(GPIOK, BSP_GPIOK_LED4);
             break;


        case 1u:
             HAL_GPIO_TogglePin(GPIOG,BSP_GPIOG_LED1);
             break;


        case 2u:
             HAL_GPIO_TogglePin(GPIOD, BSP_GPIOD_LED2);
             break;


        case 3u:
             HAL_GPIO_TogglePin(GPIOD, BSP_GPIOD_LED3);
             break;


        case 4u:
             HAL_GPIO_TogglePin(GPIOK, BSP_GPIOK_LED4);
             break;


        default:
             break;
    }
}
