==> June222/Embedded_Project_FLIGHT/NUCLEO-f429zi_example_code (1)/Examples/ST/STM32F429II-SK/BSP/bsp.c <==
#define   BSP_MODULE
#include  <bsp.h>
#include  <os.h>
#define BSP_GPIOB_LED1	DEF_BIT_00
#define BSP_GPIOB_LED2	DEF_BIT_07
#define BSP_GPIOB_LED3	DEF_BIT_14
#define  BSP_REG_DEM_CR                           (*(CPU_REG32 *)0xE000EDFC)
#define  BSP_REG_DWT_CR                           (*(CPU_REG32 *)0xE0001000)
#define  BSP_REG_DWT_CYCCNT                       (*(CPU_REG32 *)0xE0001004)
#define  BSP_REG_DBGMCU_CR                        (*(CPU_REG32 *)0xE0042004)
#define  BSP_REG_RCC_BASE_ADDR                    ((CPU_INT32U)(0x40023800))
#define  BSP_REG32_RCC_CR                         (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x00u ))
#define  BSP_REG32_RCC_PLLCFGR                    (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x04u ))
#define  BSP_REG32_RCC_CFGR                       (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x08u ))
#define  BSP_REG32_RCC_CIR                        (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x0Cu ))
#define  BSP_REG32_RCC_AHB1RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x10u ))
#define  BSP_REG32_RCC_AHB2RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x14u ))
#define  BSP_REG32_RCC_AHB3RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x18u ))
#define  BSP_REG32_RCC_APB1RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x20u ))
#define  BSP_REG32_RCC_APB2RSTR                   (*(CPU_REG32 *)( BSP_REG_RCC_BASE_ADDR + 0x24u ))

void  BSP_Init (void)
{
    CPU_INT32U reg_val;
    CPU_INT32U hse_rdyctr;

    BSP_IntInit();
                                                                /* ---------- RESET CLOCK CONFIG. REGISTERS ----------- */

    DEF_BIT_SET(BSP_REG32_RCC_CR,BSP_BIT_RCC_CR_HSION);         /* Set HSION bit                                        */

    BSP_REG32_RCC_CFGR  = (CPU_INT32U)0u;                       /* Reset CFGR register                                  */

    BSP_REG32_RCC_CR    &= 0xFEF6FFFFu;                         /* Reset HSEON, CSSON and PLLON bits                    */

    BSP_REG32_RCC_PLLCFGR = BSP_MSK_RCC_PLLCFGR_RST;            /* Reset PLLCFGR register                               */

    DEF_BIT_CLR(BSP_REG32_RCC_CR, BSP_BIT_RCC_CR_HSEBYP);       /* Reset HSEBYP bit                                     */

                                                                /* ----------- HSE OSCILLATOR CONFIGURATION ----------- */
                                                                /* HSE = 8MHz Ext. crystal.                             */
    DEF_BIT_CLR(BSP_REG32_RCC_CR,BSP_MSK_HSECFG);

    DEF_BIT_SET(BSP_REG32_RCC_CR,BSP_BIT_RCC_CR_HSEON);
                                                                /* Wait for HSE to Start Up                             */
    do {
        hse_rdyctr++;
    } while ((hse_rdyctr < HSE_TIMEOUT_VAL)  &&
              DEF_BIT_IS_CLR(BSP_REG32_RCC_CR, BSP_BIT_RCC_CR_HSERDY));


    if (hse_rdyctr == HSE_TIMEOUT_VAL) {
        return;
    }
                                                                /* --------------- SET UP THE AHB PRESCALER ----------- */
                                                                /* HCLK = AHBCLK  = PLL / AHBPRES(1) = 168MHz.          */
    reg_val = (CPU_INT32U)0u;
    reg_val = BSP_REG32_RCC_CFGR;

    DEF_BIT_CLR(reg_val, BSP_MSK_RCC_CFGR_HPRE);                /* Clear HPRE[3:0] bits                                 */

    DEF_BIT_SET(reg_val, BSP_MSK_RCC_CFGR_SYSCLKDIV1);          /* Set HPRE[3:0] bits according to RCC_SYSCLK value     */

    BSP_REG32_RCC_CFGR = reg_val;                               /* Store the new value in RCC_CFGR register             */

                                                                /* ---------------- CONFIGURE APB2 CLOCK -------------- */
                                                                /*   APB2CLK = AHBCLK  / APB2DIV(2) = 84MHz.            */
    reg_val = BSP_REG32_RCC_CFGR;

    DEF_BIT_CLR(reg_val, BSP_MSK_RCC_CFGR_PPRE2);                /* Clear PPRE2[2:0] bits                                */

    DEF_BIT_SET(reg_val, BSP_MSK_RCC_CFGR_HCLK_DIV2 << 3u);     /* Set PPRE2[2:0] bits according to RCC_HCLK value      */

    BSP_REG32_RCC_CFGR = reg_val;                               /* Store the new value                                  */

                                                                /* ---------------- CONFIGURE APB1 CLOCK -------------- */
                                                                /* APB1CLK = AHBCLK  / APB1DIV(4) = 42MHz (max).        */
    reg_val = BSP_REG32_RCC_CFGR;

    DEF_BIT_CLR(reg_val,BSP_MSK_RCC_CFGR_PPRE1);                /* Clear PPRE1[2:0] bits                                */

    DEF_BIT_SET(reg_val, BSP_MSK_RCC_CFGR_HCLK_DIV4);           /* Set PPRE1[2:0] bits according to RCC_HCLK value      */

                                                                /* Store the new value in RCC_CFGR register             */
    BSP_REG32_RCC_CFGR    =     reg_val;
                                                                /* ------------- CONFIGURE AND ENABLE PLL ------------- */
                                                                /* PLL_M = 8, PLL_N = 336, PLL_P = 2, PLL_Q = 7         */
                                                                /* PLLCLK    = HSE * (PLLN / PLLM)      = 336MHz.       */
                                                                /* SYSCLK    = PLLCLK / PLLP            = 168MHz.       */
                                                                /* OTG_FSCLK = PLLCLK / PLLQ            =  48MHz.       */

    BSP_REG32_RCC_PLLCFGR = ( BSP_BIT_RCC_PLLCFGR_PLLM       )               |
                            ( BSP_BIT_RCC_PLLCFGR_PLLN << 6u )               |
                            ( BSP_MSK_PLLCFGR_PLLSRC_HSE     )               |
                            ((BSP_BIT_RCC_PLLCFGR_PLLP >> 1u ) -1u ) << 16u  |
                            ( BSP_BIT_RCC_PLLCFGR_PLLQ << 24u);

    DEF_BIT_SET( BSP_REG32_RCC_CR, BSP_BIT_RCC_CR_PLLON);
                                                                /* Wait for PLL to lock.                                */
    while ( DEF_BIT_IS_CLR( BSP_REG32_RCC_CR,
                            BSP_BIT_RCC_CR_PLLRDY)) {
        ;
    }
                                                                /* ------------- CONFIGURE FLASH MEMORY --------------- */

    DEF_BIT_SET(BSP_REG32_FLASH_ACR, BSP_MSK_FLASHLATENCY_5WS); /* Allow 5 Flash Wait States when HCLK > 120MHz.        */

                                                                /* Enable Prefetch, Instruction Cache, and Data Cache.  */
    DEF_BIT_SET(BSP_REG32_FLASH_ACR, (BSP_BIT_FLASH_ACR_PRFTEN  |
                                      BSP_BIT_FLASH_ACR_ICEN    |
                                      BSP_BIT_FLASH_ACR_DCEN));
                                                                /* -------- SELECT PLL OUTPUT AS SYSTEM CLOCK --------- */
                                                                /* HCLK = SYSCLK = PLL = 168MHz.                        */
    DEF_BIT_SET(BSP_REG32_RCC_CFGR, BSP_MSK_SYSCLK_SRC_PLLCLK);


    while((BSP_REG32_RCC_CFGR & BSP_MSK_RCC_CFGR_SWS)             /* Wait until PLL is selected as system clock source    */
                              != BSP_MSK_RCC_CFGR_SWS_PLL){
        ;
    }

    BSP_LED_Init();                                             /* Initialize user LEDs                                 */

#ifdef TRACE_EN                                                 /* See project / compiler preprocessor options.         */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_IOEN_MASK;    /* Enable tracing (see Note #2).                        */
    BSP_CPU_REG_DBGMCU_CR &= ~BSP_DBGMCU_CR_TRACE_MODE_MASK;    /* Clr trace mode sel bits.                             */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_MODE_SYNC_04; /* Cfg trace mode to synch 4-bit.                       */
#endif
}

CPU_INT32U  BSP_CPU_ClkFreq (void)
{
    RCC_ClocksTypeDef  rcc_clocks;


    RCC_GetClocksFreq(&rcc_clocks);

    return ((CPU_INT32U)rcc_clocks.HCLK_Frequency);
}

static void  BSP_LED_Init()
{
    GPIO_InitTypeDef  gpio_init;

	BSP_PeriphEn(BSP_PERIPH_ID_GPIOB);

//	gpio_init.GPIO_Pin   = BSP_GPIOB_LED1;
//	gpio_init.GPIO_Mode = GPIO_Mode_OUT;
//	gpio_init.GPIO_OType = GPIO_OType_PP;
//	gpio_init.GPIO_Speed = GPIO_Speed_2MHz;
//	gpio_init.GPIO_PuPd = GPIO_PuPd_NOPULL;
//	GPIO_Init(GPIOB, &gpio_init);

	gpio_init.GPIO_Pin   = BSP_GPIOB_LED2;
	gpio_init.GPIO_Mode = GPIO_Mode_OUT;
	gpio_init.GPIO_OType = GPIO_OType_PP;
	gpio_init.GPIO_Speed = GPIO_Speed_2MHz;
	gpio_init.GPIO_PuPd = GPIO_PuPd_NOPULL;
	GPIO_Init(GPIOB, &gpio_init);

//	gpio_init.GPIO_Pin   = BSP_GPIOB_LED3;
//	gpio_init.GPIO_Mode = GPIO_Mode_OUT;
//	gpio_init.GPIO_OType = GPIO_OType_PP;
//	gpio_init.GPIO_Speed = GPIO_Speed_2MHz;
//	gpio_init.GPIO_PuPd = GPIO_PuPd_NOPULL;
//	GPIO_Init(GPIOB, &gpio_init);

}

void  BSP_LED_Off (CPU_INT08U  led)
{
    switch (led) {
        case 0u:
             GPIO_ResetBits(GPIOB, BSP_GPIOB_LED1);
             GPIO_ResetBits(GPIOB, BSP_GPIOB_LED2);
             GPIO_ResetBits(GPIOB, BSP_GPIOB_LED3);
             break;


        case 1u:
        	GPIO_ResetBits(GPIOB, BSP_GPIOB_LED1);
             break;


        case 2u:
        	GPIO_ResetBits(GPIOB, BSP_GPIOB_LED2);
        	//GPIO_WriteBit(GPIOB, GPIO_Pin_7, Bit_RESET);
             break;


        case 3u:
        	GPIO_ResetBits(GPIOB, BSP_GPIOB_LED3);
             break;

        default:
             break;
    }
}

void  BSP_LED_On (CPU_INT08U led)
{
    switch (led) {
        case 0u:
             GPIO_ResetBits(GPIOB, BSP_GPIOB_LED1);
             GPIO_ResetBits(GPIOB, BSP_GPIOB_LED2);
             GPIO_ResetBits(GPIOB, BSP_GPIOB_LED3);
             break;


        case 1u:
             GPIO_SetBits(GPIOB, BSP_GPIOB_LED1);
        	 //GPIO_WriteBit(GPIOB, GPIO_Pin_0, Bit_SET);
             break;


        case 2u:
        	 //GPIO_SetBits(GPIOB, GPIO_Pin_7, Bit_SET);
        	GPIO_SetBits(GPIOB, BSP_GPIOB_LED2);
             break;


        case 3u:
        	//GPIO_WriteBit(GPIOB, GPIO_Pin_14, Bit_SET);
        	 GPIO_SetBits(GPIOB, BSP_GPIOB_LED3);
             break;

        default:
             break;
    }
}

void  BSP_LED_Toggle (CPU_INT08U  led)
{
    CPU_INT32U  pins;


    switch (led) {
        case 0u:
        	/* Read data (current state of output pins) in GPIOA    */
        	/* Tells which pins (other than pin for LED1) are ON    */
        	/* If there are any,turn them OFF and leave LED1 ON     */
             pins  =  GPIO_ReadOutputData(GPIOB);
             pins ^=  BSP_GPIOB_LED1;
             GPIO_SetBits(  GPIOB,   pins  &  BSP_GPIOB_LED1);
             GPIO_ResetBits(GPIOB, (~pins) &  BSP_GPIOB_LED1);


             pins  =  GPIO_ReadOutputData(GPIOB);
             pins ^=  BSP_GPIOB_LED2;
             GPIO_SetBits(  GPIOB,   pins  &  BSP_GPIOB_LED2);
             GPIO_ResetBits(GPIOB, (~pins) &  BSP_GPIOB_LED2);

             pins  =  GPIO_ReadOutputData(GPIOB);
             pins ^=  BSP_GPIOB_LED3;
             GPIO_SetBits(  GPIOB,   pins  &  BSP_GPIOB_LED3);
             GPIO_ResetBits(GPIOB, (~pins) &  BSP_GPIOB_LED3);
             break;


        case 1u:
            pins  =  GPIO_ReadOutputData(GPIOB);
            pins ^=  BSP_GPIOB_LED1;
            GPIO_SetBits(  GPIOB,   pins  &  BSP_GPIOB_LED1);
            GPIO_ResetBits(GPIOB, (~pins) &  BSP_GPIOB_LED1);
             break;


        case 2u:
       	     pins  = GPIO_ReadOutputData(GPIOB);
       	     pins ^= BSP_GPIOB_LED2;
       	     GPIO_SetBits(  GPIOB,   pins   &  BSP_GPIOB_LED2);
       	     GPIO_ResetBits(GPIOB, (~pins)  &  BSP_GPIOB_LED2);
             break;


        case 3u:
       	     pins  = GPIO_ReadOutputData(GPIOB);
       	     pins ^= BSP_GPIOB_LED3;
       	     GPIO_SetBits(  GPIOB,   pins   &  BSP_GPIOB_LED3);
       	     GPIO_ResetBits(GPIOB, (~pins)  &  BSP_GPIOB_LED3);
             break;

        default:
             break;
    }
}
